adicionando icones, lista de conteudo e animação de  carrossel

--- a/index.html
+++ b/index.html
@@ -21,19 +21,44 @@
             <p class="principal-sobre">Descubra o músico que existe em você</p>
             <p class="principal-sobre">Aprenda guitarra do zero, com a melhor metodologia!</p>
 
+            <section class="conteudo">
+                <h3 class="conteudo-titulo">CONTEÚDO DO CURSO (100% DIGITAL)</h3>
+                <ul class="conteudo-lista">
+                    <li>Musicalidade</li>
+                    <li>Técnica</li>
+                    <li>Pentas, shapes e afins</li>
+                    <li>Harmonia</li>
+                    <li>Bônus</li>
+                </ul>
+            </section>
+
         </div>
+
         <div class="principal-imagem">
-            <img class="guitarra" src="./fender-jimy-hendrix.png" alt="">
+            <div class="photos">
+                <img class="guitarra" src="./img/fender-jimy-hendrix.png" alt="">
+                <img class="guitarra" src="./img/les-paul.png" alt="">
+                <img class="guitarra" src="./img/telecaster-fender.png" alt="">
+                
+            </div>
+
         </div>
         <div class="principal-form">
             <form action="">
                 <div class="cadastro">
 
+                    <p class="cadastro-texto">Receba o material aqui!</p>
+                    <p class="cadastro-texto-dois">É simples! Basta preencher o formulário abaixo :)</p>
                     <input class="nome" type="text" name="nome" id="cadastro-nome" placeholder="Nome e sobrenome">
-                    <input type="tel" name="telefone" id="cadastro-telefone" placeholder="Telefone">
                     <input type="email" name="email" id="cadastro-email" placeholder="Email">
-                    <button class="botao" type="submit">Adquirir o material</button>
+                    <input type="tel" name="telefone" id="cadastro-telefone" placeholder="Telefone">
+                    <button class="botao" type="submit">Receber material</button>
 
+                </div>
+                <div class="icones">
+                    <img src="./img/facebook-icon.png" alt="face">
+                    <img src="./img/instagram-icon.png" alt="insta">
+                    <img src="./img/linkedin-icone.png" alt="in">
                 </div>
 
             </form>
